[tool.poetry]
name = "conut"
version = "0.1.0"
description = ""
authors = ["ayush"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
certifi = "^2023.5.7"
dj-database-url = "^2.0.0"
django-hosts = "^5.2"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.6"
pytz = "^2023.3"
sqlparse = "^0.4.4"
whitenoise = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
