[tool.poetry]
name = "conut"
version = "0.1.0"
description = ""
authors = ["Ayush <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dj-database-url = "^2.0.0"
django = "^4.2.1"
django-hosts = "^5.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
